fix: Made highlighted slot more visible

--- a/src/main/less/endofline.less
+++ b/src/main/less/endofline.less
@@ -147,5 +147,5 @@
 
 .enabled-card-slot{
   cursor: pointer;
-  background: whitesmoke;
+  background: darkgrey;
 }
